@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.235 2005/09/19 09:41:37 fanf2 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.236 2005/09/19 11:56:11 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -206,6 +206,9 @@ PH/48 A number of further additions for the benefit of the new test suite,
 TF/06 The fix for widen_domains has also been applied to qualify_single and
       search_parents which are the other dnslookup options that can cause
       header rewrites.
+
+PH/49 Michael Haardt's randomized retrying, but as a separate retry parameter
+      type ("H").
 
 
 Exim version 4.52
